# Calendar-Project

./: MY_README.md
python-project/: app.py  pyproject.toml
python-project/io_comp/: __init__.py
python-project/io_comp/models/: Event.py  TimeSlot.py  __init__.py
python-project/io_comp/repository/: CalendarRepository.py  ICalendarRepository.py  __init__.py
python-project/io_comp/service/: AvailabilityService.py  __init__.py
python-project/io_comp_scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-project/templates/: index.html
python-project/tests/: test_app.py
